# github-crawl

./: README.md  pyproject.toml  task.md
.github/workflows/: crawl-stars.yml
github_crawl/: __init__.py  cli.py  config.py  crawler.py  db.py  github_client.py  graphql_queries.py  models.py  partitioner.py  rate_limiter.py
github_crawl/sql/: schema.sql
tests/: test_github_client.py  test_models.py  test_partitioner.py  test_rate_limiter.py
