[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-crawl"
version = "0.1.0"
description = "GitHub GraphQL crawler for repository star counts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Magic Candidate"}
]
dependencies = [
  "httpx>=0.27.0",
  "asyncpg>=0.29.0",
  "typer>=0.12.3",
  "pydantic>=2.6.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-dotenv>=0.5",
  "ruff>=0.4"
]

[project.scripts]
github-crawl = "github_crawl.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning"
]
markers = [
  "db: marks tests that require a running postgres instance"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "E266"]

